--- a/Case1/JSON.html
+++ b/Case1/JSON.html
@@ -11,7 +11,7 @@
 
     <script>
         var xmlhttp = new XMLHttpRequest();
-        var url = "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=1";
+        var url = "http://data.ntpc.gov.tw/api/v1/rest/datastore/382000000A-000095-002";
         xmlhttp.onreadystatechange=function() {
             if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
                 myFunction(xmlhttp.responseText);
@@ -25,10 +25,12 @@
             var i;
             var out = '<table class="table table-striped table-hover">' +
                         '<thead><tr><th scope="col">#</th>' +
-                        '<th scope="col">活動名稱</th>' +
-                        '<th scope="col">主辦單位</th>' +
-                        '<th scope="col">活動時間</th>' +
-                        '<th scope="col">活動售票</th></tr></thead><tbody>';
+                        '<th scope="col">縣市別</th>' +
+                        '<th scope="col">段小段</th>' +
+                        '<th scope="col">公告現值</th>' +
+                        '<th scope="col">行政區</th>' +
+                        '<th scope="col">地區</th>' +
+                        '<th scope="col">公告地價</th></tr></thead><tbody>';
         
             for(i = 0; i < arr.length; i++) {
                 out += '<tr><th scope="row">' + i + '</th><td>' +
