--- a/Case1/JSON.html
+++ b/Case1/JSON.html
@@ -8,37 +8,36 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- 使用getJSON()需引用jQuery -->
+    <!-- 使用ajax()需引用jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script>
         jQuery(document).ready(function(){
-            var url = "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=1";
-            var jqxhr = $.getJSON(url, function(arr) {
-                console.log("success");
-                var i;
-                var out = '<table class="table table-striped table-hover">' +
+            $.ajax({
+                type: "GET",
+                url: "https://cloud.culture.tw/frontsite/trans/SearchShowAction.do?method=doFindTypeJ&category=1",
+                dataType: "json",
+                async: true,
+                success: function(arr) {
+                    console.log("success!");
+                    var i;
+                    var out = '<table class="table table-striped table-hover">' +
                             '<thead><tr><th scope="col">#</th>' +
                             '<th scope="col">活動名稱</th>' +
                             '<th scope="col">主辦單位</th>' +
                             '<th scope="col">活動時間</th>' +
                             '<th scope="col">活動售票</th></tr></thead><tbody>';
             
-                for(i = 0; i < arr.length; i++) {
-                    out += '<tr><th scope="row">' + i + '</th><td>' +
-                    arr[i].title + "</td><td>" +
-                    arr[i].masterUnit + "</td><td>" +
-                    arr[i].startDate + "</td><td>" +
-                    arr[i].sourceWebName + "</td></tr>";
+                    for(i = 0; i < arr.length; i++) {
+                        out += '<tr><th scope="row">' + i + '</th><td>' +
+                        arr[i].title + "</td><td>" +
+                        arr[i].masterUnit + "</td><td>" +
+                        arr[i].startDate + "</td><td>" +
+                        arr[i].sourceWebName + "</td></tr>";
+                    }
+                    out += "</tbody></table>";
+                    document.getElementById("showData").innerHTML = out;
                 }
-                out += "</tbody></table>";
-                document.getElementById("showData").innerHTML = out;
-            }).done(function() {
-                console.log("second success");
-            }).fail(function() {
-                console.log( "error" );
-            }).always(function() {
-                console.log( "complete" );
             });
         });
     </script>
